--- a/crud-fetch.html
+++ b/crud-fetch.html
@@ -44,7 +44,17 @@
       </td>   
     </tr>
   </template>
+  <script>
+    
+    const d = document,
+      $table = d.querySelector(".crud-table"),
+      $form = d.querySelector(".crud-form"),
+      $title = d.querySelector(".crud-title"),
+      $template = d.getElementById("crud-template").content,
+      $fragment = d.createDocumentFragment();
 
+
+  </script>
 </body>
 
 </html>
